--- a/pp.html
+++ b/pp.html
@@ -11,7 +11,7 @@
     // 模拟一个触发重定向的场景
     function simulateRedirect() {
         // 模拟 HTTP 302 重定向，携带原链接的参数
-        var redirectUrl = 'https://example.com/new-page';
+        var redirectUrl = 'https://www.baidu.com';
         
         // 获取原链接的参数
         var originalParams = window.location.search.substring(1);
