--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>302 Redirect Example</title>
+    <title>Pk star</title>
     <p>test deep link</p>
 </head>
 <body>
